--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -32,12 +32,11 @@
   &__popup {
     position: absolute;
     right: 0;
-    margin-top: 15px;
-    background: #ffffff;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.09);
+    margin-top: 10px;
+    background: #fff;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     overflow: hidden;
-    padding: 10px 0;
     width: 160px;
 
     ul {
